# dic

./: .gitmodules  CMakeLists.txt  main.cpp
lib/fftw3/lib/: libfftw3.so.3
lib/fftw3/lib/cmake/fftw3/: FFTW3Config.cmake
lib/fftw3/lib/pkgconfig/: fftw3.pc
